--- a/data/processed_data/Normalization of Beta Data.Rmd
+++ b/data/processed_data/Normalization of Beta Data.Rmd
@@ -22,12 +22,7 @@ library(GEOquery)
 filePaths = getGEOSuppFiles("GSE59685")
 filePaths
 ```
-**Dasen normalization**
-
-This csv file has already been **dasen** normalized using the R package ["wateRmelon"](https://www.bioconductor.org/packages/devel/bioc/manuals/wateRmelon/man/wateRmelon.pdf).
-
-The desen method for normalizing Illumina 540K methylation array data was developed by [Pidsley et al 2013](http://bmcgenomics.biomedcentral.com/articles/10.1186/1471-2164-14-293). It has three different normalization preprocessing methods applied (1) background adjustment for the offset between Type 1 and Type II probes intensities are added to Type I intensities (2) between-array normalization is applied to Type I and Type II probes separately (3) no dye bias correction applied. The dasen method has been shown to perform consistently well for both Type and Type II probe data ([Pidsley et al 2013](http://bmcgenomics.biomedcentral.com/articles/10.1186/1471-2164-14-293)), and therefore was deemed an appropriate normalization method for this dataset.   
-
+**Formatting Beta data**
 ```{r format beta values}
 
 GSE59685<-read.csv("/home/hbrewis/Methylhomies/GSE59685 datafiles/GSE59685_betas.csv", skip=5)
@@ -39,5 +34,11 @@ GSE59685_numeric<-GSE59685_numeric[,-1]
 rownames(GSE59685_numeric)<-GSE59685$X
 save(GSE59685_numeric, file="GSE59685_numeric.RData")
 ```
+**Dasen normalization**
+
+This csv file has already been **dasen** normalized using the R package ["wateRmelon"](https://www.bioconductor.org/packages/devel/bioc/manuals/wateRmelon/man/wateRmelon.pdf).
+
+The desen method for normalizing Illumina 540K methylation array data was developed by [Pidsley et al 2013](http://bmcgenomics.biomedcentral.com/articles/10.1186/1471-2164-14-293). It has three different normalization preprocessing methods applied (1) background adjustment for the offset between Type 1 and Type II probes intensities are added to Type I intensities (2) between-array normalization is applied to Type I and Type II probes separately (3) no dye bias correction applied. The dasen method has been shown to perform consistently well for both Type and Type II probe data ([Pidsley et al 2013](http://bmcgenomics.biomedcentral.com/articles/10.1186/1471-2164-14-293)), and therefore was deemed an appropriate normalization method for this dataset.   
+
 
 
