--- a/data/processed_data/Correction_matters.2.Rmd
+++ b/data/processed_data/Correction_matters.2.Rmd
@@ -105,6 +105,7 @@ identical(colnames(GSE43414_cell_cor_sorted_by_brain_regions),as.character(meta_
 
 brain_regions <- meta_order_by_brain_regions$broad_regions
 tissue <- meta_order_by_brain_regions$Tissue
+breaksList <- seq(0, 1, by = 0.2)
 #sample of 100 probes
 set.seed(1)
 probes <- sample(rownames(GSE43414_cell_cor_sorted_by_brain_regions),100)
@@ -113,9 +114,9 @@ aheatmap(GSE43414_batch_cor_sorted_by_brain_regions[probes,], Colv = NA,annCol =
 aheatmap(GSE43414_batch_cor_sorted_by_brain_regions[probes,], annCol = list(Brain_Region = brain_regions, Tissue = tissue), main =  "Uncorrected heatmap of 100 probes")
 
 
-aheatmap(GSE43414_cell_cor_sorted_by_brain_regions[probes,], Colv = NA, annCol = list(Brain_Region = brain_regions, Tissue = tissue, main = "Corrected heatmap of 100 probes"))
+aheatmap(GSE43414_cell_cor_sorted_by_brain_regions[probes,], color = colorRampPalette(rev(brewer.pal(n = 6, name = "RdYlBu")))(length(breaksList)), Colv = NA, annCol = list(Brain_Region = brain_regions, Tissue = tissue), main = "Corrected heatmap of 100 probes")
 
-aheatmap(GSE43414_cell_cor_sorted_by_brain_regions[probes,], annCol = list(Brain_Region = brain_regions, Tissue = tissue, main = "Corrected heatmap of 100 probes"))
+aheatmap(GSE43414_cell_cor_sorted_by_brain_regions[probes,], annCol = list(Brain_Region = brain_regions, Tissue = tissue), main = "Corrected heatmap of 100 probes")
 
 
 ```
@@ -194,6 +195,9 @@ aheatmap(cor(cell_sub),Colv = NA, Rowv = NA,  annCol = list(Brain_Region = brain
 ```
 **Both correlated a lot with eachother**
 
+
+
+
 ```{r boxes}
 
 plotfunction2 <- function(n)
@@ -261,12 +265,88 @@ plotfunction4(meta_probes_meled[meta_probes_meled$variable== "cg14813579",] )
 
 one in mill paper cg02573091
 sup cg01156747, cg08835221, cg06242242. cg20636526, cg12362118
-- none of these are in our data set
 
 
-_____
-treat normalization like a treatment and do linear regression between the two?
 
-D
+```{r ven}
 
-QN, QN + cell corrected, QN + BMIQ, QN + BMIQ + cell type
+cell.probes <- read.csv("/Volumes/Lexar/lists for differental expression/cellprobes.csv")
+colnames(cell.probes) <- "cell.probes"
+  
+batch.probes <- read.csv("/Volumes/Lexar/lists for differental expression/batchprobes.csv")
+colnames(batch.probes) <- "batch.probes"
+  
+both.probes <- read.csv("/Volumes/Lexar/lists for differental expression/bothprobes.csv")
+colnames(both.probes) <- "both.probes"
+
+set.seed(8)
+#cell.pr <- sample(t(cell.probes),1)
+#batch.pr <- sample(t(batch.probes),1)
+#both.pr <- sample(t(both.probes),1)
+cell.pr <- "cg19373545"
+batch.pr <- "cg07673080"
+both.pr <- "cg04427707"
+probes.2 <- c(cell.pr,batch.pr,both.pr)
+
+#compare expression of those 100 probes between data sets
+# create a combined data set
+batch_sub <- GSE43414_batch_cor_sorted_by_brain_regions[probes.2,]
+t.batch_sub <- t(batch_sub)
+colnames(t.batch_sub) <- gsub("cg", "batch", colnames(t.batch_sub))
+
+cell_sub <- GSE43414_cell_cor_sorted_by_brain_regions[probes.2,]
+t.cell_sub <- t(cell_sub)
+colnames(t.cell_sub) <- gsub("cg", "cell", colnames(t.cell_sub))
+
+identical(rownames(t.cell_sub),as.character(meta_order_by_brain_regions$barcode))
+
+identical(rownames(t.batch_sub),as.character(meta_order_by_brain_regions$barcode))
+
+ 
+identical(as.character(cell_met$gsm),as.character(batch_met$gsm))
+
+Meta_probes <- data.frame(meta_order_by_brain_regions, t.cell_sub, t.batch_sub)
+
+cell_met <- data.frame(Meta_probes[,c(2:4,12,17)], t.cell_sub)
+# keeps "gms", "Subject", "barcode", "Tissue","broad_regions"
+batch_met <- data.frame(Meta_probes[,c(2:4,12,17)], t.batch_sub)
+
+cell_melt <- melt(cell_met, id.vars= c("gsm", "Tissue", "broad_regions", "Subject", "barcode"))
+cell_melt$Data.set <- "cell_corrected"
+
+batch_melt <- melt(batch_met, id.vars= c("gsm", "Tissue", "broad_regions", "Subject", "barcode"))
+batch_melt$Data.set <- "not_corrected"
+
+meta_probes_meled <- rbind(batch_melt,cell_melt)
+meta_probes_meled$variable <- gsub("cell", "cg", meta_probes_meled$variable)
+meta_probes_meled$variable <- gsub("batch", "cg", meta_probes_meled$variable)
+ 
+
+
+```
+
+Top one only found in cell 
+```{r box2}
+
+plotfunction4(meta_probes_meled[meta_probes_meled$variable== cell.pr,] )
+
+```
+
+Top one only in batch
+```{r mo}
+
+
+plotfunction4(meta_probes_meled[meta_probes_meled$variable== batch.pr,] )
+
+```
+
+Top found in both
+```{r mre}
+
+plotfunction4(meta_probes_meled[meta_probes_meled$variable== both.pr,] )
+```
+
+
+
+
+
