Update Dasen Normalization of Beta Data.Rmd

--- a/src/Dasen Normalization of Beta Data.Rmd
+++ b/src/Dasen Normalization of Beta Data.Rmd
@@ -1,4 +1,4 @@
-Normalization of Beta Data
+Dasen Normalization of Beta Data
 =======================================
 
 ### Original author: Rachel Edgar
